# hyperliquid

./: .gitignore  CHANGELOG.md  MIGRATION_COMPLETE.md  MIGRATION_v0.2.md  README.md  checksum-Elixir.Hyperliquid.Signer.exs  mix.exs
.github/workflows/: nif_build.yml
.planning/: PROJECT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
config/: config.exs  dev.exs  dev.secret.exs.example
docs/: README.md  SUMMARY.md
docs/advanced/: architecture.md  endpoint-dsl.md  error-handling.md  signing.md  telemetry.md
docs/api-reference/: exchange.md  explorer.md  info.md  rpc.md  subscriptions.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/guides/: caching.md  database-integration.md  livebook.md  placing-orders.md  websocket-subscriptions.md
lib/hyperliquid/: api.ex  application.ex  cache.ex  config.ex  error.ex  repo.ex  signer.ex  telemetry.ex  utils.ex
lib/hyperliquid/api/: common.ex  delegation_helper.ex  endpoint.ex  endpoint_behaviour.ex  exchange.ex  exchange_endpoint.ex  explorer.ex  info.ex  registry.ex  stats.ex  subscription_endpoint.ex
lib/hyperliquid/cache/: warmer.ex
native/signer/: Cargo.toml  README.md
native/signer/src/: lib.rs
priv/repo/: seeds.exs
test/: explorer_test.exs  info_test.exs  signer_l1_test.exs  signer_multi_sig_test.exs  signer_user_signed_test.exs  stats_test.exs  test_helper.exs
test/api/: multi_table_dsl_test.exs
test/debug/: send_asset_debug_test.exs
test/rpc/: evm_test.exs
test/storage/: writer_test.exs
(+182 files in other folders)
